welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:4: error: not found: type i
    if ( lookingFor== nums[i] ) {
                           ^occurrences:4: error: value nums of type Array[Int] does not take type parameters.
    if ( lookingFor== nums[i] ) {
                          ^